Adicionando testes de controller e external
